# llm_rag_search_system

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: pr-reviewer.md
dashboard/: index.html
docs/: how-the-rag-query-works.md  scripts_how_to.md  system_architecture.md
docs/adr/: 001-chunking-strategy.md  002-embedding-and-indexing.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: _dump_chunks.py  benchmark.py  bulk_ingest.py  crawl_huggingface.py  crawl_internet_archive.py  evaluate.py  seed_db.py  setup_bedrock_logging.sh
src/: config.py  main.py
src/api/: deps.py
src/api/routes/: admin.py  auth.py  billing.py  documents.py  query.py
src/core/auth/: jwt.py  rbac.py  service.py
src/core/billing/: service.py  stripe_client.py  usage_tracker.py
src/core/crawler/: base.py
src/core/ingestion/: chunker.py  embedder.py  metadata.py  pipeline.py  sparse_encoder.py  table_extractor.py  table_indexer.py
src/core/query/: analyzer.py  citation.py  context_builder.py  generator.py  model_router.py  pipeline.py  reranker.py  retriever.py
src/db/cache/: redis_client.py
src/db/postgres/: models.py  session.py
src/db/storage/: s3_client.py
src/db/vector/: qdrant_client.py
src/shared/: constants.py  exceptions.py  logging.py  monitoring.py
tests/e2e/: test_ingest_and_search.py
tests/integration/: test_hybrid_retrieval.py  test_ingestion_pipeline.py  test_query_pipeline.py  test_table_extraction.py
tests/unit/: test_auth_service.py  test_billing.py  test_chunker.py  test_crawler_huggingface.py  test_crawler_internet_archive.py  test_embedder.py  test_qdrant_client.py  test_repositories.py  test_reranker.py
(+8 files in other folders)
