[project]
name = "llm-rag-search-system"
version = "0.1.0"
description = "Production-grade RAG platform for conversational search over 400K+ digital manuals"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis[asyncio]>=5.1.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "qdrant-client>=1.12.0",
    "openai>=1.50.0",
    "anthropic>=0.37.0",
    "tiktoken>=0.8.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "camelot-py[cv]>=0.11.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "spacy>=3.7.0",
    "stripe>=10.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "internetarchive>=4.1.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.25.0",
    "cohere>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "locust>=2.31.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
